# auto-g-embed

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: export_weights.rs  rust_embed.rs  semantic_embed.rs
examples/worker/embeddings-worker/: Cargo.toml  README.md  wrangler.toml
examples/worker/embeddings-worker/src/: lib.rs
examples/worker/embeddings-worker/test/: batch.json  run.py  semantic_similarity.json  single.json
model/Octen-0.6B/: export_onnx.py
scripts/: run_real_eval.py
src/: lib.rs  rust_embedder.rs  semantic.rs  transformer.rs
test-data/: README.md
tests/: perf_quality.rs
training/: README.md  dataset_profiles.json  export_onnx_model.py  prepare_kaggle_contrastive.py  publish_sentence_transformer.py  requirements.txt  run_pipeline.sh  train_sentence_transformer.py
