[package]
name = "auto-g-embed"
version = "0.2.0"
edition = "2024"
description = "A Rust library for generating text embeddings"
license = "MIT"

[features]
default = ["polars-full"]
wasm = []
polars-full = ["polars/default"]
semantic = [
    "dep:anyhow",
    "dep:ndarray",
    "dep:ort",
    "dep:tokenizers",
]

[dependencies]
polars = { version = "0.46.0", default-features = false, features = ["parquet"] }
csv = "1.3.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
anyhow = { version = "1.0.97", optional = true }
ndarray = { version = "0.17.2", optional = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "copy-dylibs", "tls-native"], optional = true }
tokenizers = { version = "0.20.4", default-features = false, features = ["onig"], optional = true }
