[package]
name = "embeddings-worker"
version = "0.1.0"
edition = "2021"
authors = ["Geoff Seemueller <geoff@seemueller.io>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ['http'] }
worker-macros = { version = "0.7", features = ['http'] }
http = "1.3"
auto-g-embed = { path = "../../..", default-features = false, features = ["wasm"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
